19/shawty/.stack-work/logs/unix-time-0.4.5.log
[1 of 2] Compiling Main             ( /tmp/stack14370/unix-time-0.4.5/Setup.hs, /tmp/stack14370/unix-time-0.4.5/.stack-work/dist/x86_64-linux/Cabal-2.4.0.1/setup/Main.o )
[2 of 2] Compiling StackSetupShim   ( /home/heitor/.stack/setup-exe-src/setup-shim-mPHDZzAJ.hs, /tmp/stack14370/unix-time-0.4.5/.stack-work/dist/x86_64-linux/Cabal-2.4.0.1/setup/StackSetupShim.o )
Linking /tmp/stack14370/unix-time-0.4.5/.stack-work/dist/x86_64-linux/Cabal-2.4.0.1/setup/setup ...
Configuring unix-time-0.4.5...
checking for gcc... /usr/bin/gcc
checking whether the C compiler works... yes
checking for C compiler default output file name... a.out
checking for suffix of executables... 
checking whether we are cross compiling... no
checking for suffix of object files... o
checking whether we are using the GNU C compiler... yes
checking whether /usr/bin/gcc accepts -g... yes
checking for /usr/bin/gcc option to accept ISO C89... none needed
checking how to run the C preprocessor... /usr/bin/gcc -E
checking for grep that handles long lines and -e... /bin/grep
checking for egrep... /bin/grep -E
checking for ANSI C header files... yes
checking for sys/types.h... yes
checking for sys/stat.h... yes
checking for stdlib.h... yes
checking for string.h... yes
checking for memory.h... yes
checking for strings.h... yes
checking for inttypes.h... yes
checking for stdint.h... yes
checking for unistd.h... yes
checking xlocale.h usability... no
checking xlocale.h presence... no
checking for xlocale.h... no
checking for strptime_l... yes
checking for timegm... yes
checking for _mkgmtime... no
checking for _get_current_locale... no
checking for strtol_l... yes
checking for strtoll_l... yes
configure: creating ./config.status
config.status: creating cbits/config.h
Preprocessing library for unix-time-0.4.5..
Building library for unix-time-0.4.5..
[1 of 5] Compiling Data.UnixTime.Types ( .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Types.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Types.o )
[2 of 5] Compiling Data.UnixTime.Sys ( .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Sys.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Sys.o )
[3 of 5] Compiling Data.UnixTime.Diff ( Data/UnixTime/Diff.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Diff.o )
[4 of 5] Compiling Data.UnixTime.Conv ( Data/UnixTime/Conv.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime/Conv.o )

[;1mData/UnixTime/Conv.hs:11:1: [;1m[35mwarning:[0m[0m[;1m [[;1m[35m-Wunused-imports[0m[0m[;1m][0m[0m[;1m
    The import of ‘Control.Applicative’ is redundant
      except perhaps to import instances from ‘Control.Applicative’
    To import instances alone, use: import Control.Applicative()[0m[0m
[;1m[34m   |[0m[0m
[;1m[34m11 |[0m[0m [;1m[35mimport Control.Applicative[0m[0m
[;1m[34m   |[0m[0m[;1m[35m ^^^^^^^^^^^^^^^^^^^^^^^^^^[0m[0m
[0m[0m[0m[5 of 5] Compiling Data.UnixTime    ( Data/UnixTime.hs, .stack-work/dist/x86_64-linux/Cabal-2.4.0.1/build/Data/UnixTime.o )

[;1mIn file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33:0: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    0,
                     from /usr/include/string.h:26,
                     from cbits/conv.c:15:[0m[0m
[0m[0m[0m
[;1m/usr/include/features.h:184:3: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
     # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
       ^~~~~~~[0m[0m
[;1m[34m    |[0m[0m
[;1m[34m184 |[0m[0m # [;1m[31mw[0m[0marning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
[;1m[34m    |[0m[0m[;1m[31m   ^[0m[0m
[0m[0m[0m
[;1mIn file included from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33:0: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
    0,
                     from /usr/include/string.h:26,
                     from cbits/conv.c:15:[0m[0m
[0m[0m[0m
[;1m/usr/include/features.h:184:3: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: #warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE" [-Wcpp]
     # warning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
       ^~~~~~~[0m[0m
[;1m[34m    |[0m[0m
[;1m[34m184 |[0m[0m # [;1m[31mw[0m[0marning "_BSD_SOURCE and _SVID_SOURCE are deprecated, use _DEFAULT_SOURCE"
[;1m[34m    |[0m[0m[;1m[31m   ^[0m[0m
[0m[0m[0mInstalling library in /home/heitor/.stack/snapshots/x86_64-linux/lts-13.22/8.6.5/lib/x86_64-linux-ghc-8.6.5/unix-time-0.4.5-HDRVGETo2bcDYyIhgFBVQm
Registering library for unix-time-0.4.5..
